@@ -156,6 +156,7 @@ t/0627_Dialog_Scan_CLI.t
 t/07_Dialog_Renumber.t
 t/08_Frontend_CLI.t
 t/09_NetPBM.t
+t/1.gs2p
 t/10_Document.t
 t/1111_save_pdf_with_locale.t
 t/1112_save_pdf_with_downsample.t
@@ -208,6 +209,7 @@ t/171_save_session.t
 t/172_open_session.t
 t/173_open_multiple_session.t
 t/174_open_crashed_session.t
+t/175_open_session2.t
 t/18_PageRange.t
 t/19_Canvas.t
 t/211_rotate.t
