@@ -6,6 +6,8 @@
 * Where available in the OCR output, use the full page/column/para/line/word
   hiearchy in the djvu text layer. Closes bug #191
   (Exported DjVu with Tesseract OCR miss a lot of structure infos)
+* Remove corrupt element from session after importing. Closes bug #195
+  (Any operation after opening a saved session crashes the program)
 
 
 1.3.0 (30.01.2015):
